# ObfusLite

./: .gitignore  COMBINER_IMPROVEMENTS.md  FINAL_CLEAN_PACKAGE.md  GUI_FEATURES.md  LICENSE  MANIFEST.in  PYPI_PACKAGE_GUIDE.md  README.md  build_package.py  combine_and_obfuscate.py  combined_app.py  fix_obfuscated_imports.py  pyproject.toml  requirements.txt  setup.py  setup_obfuslite.py  smart_batch_obfuscator.py
examples/: basic_usage.py  gui_demo.py  obfuslite_basic_usage.py  sample_project.pyobf
obfuslite/: __init__.py  cli.py  core.py  gui.py  web_requirements.txt  web_server.py
obfuslite/encoders/: __init__.py  dna_encoder.py  neural_encoder.py  runtime_reconstructor.py
obfuslite/web/: index.html
obfuslite/web/css/: main.css  themes.css
obfuslite/web/js/: main.js  themes.js
pyobfuscator/: __init__.py  cli.py  core.py  gui.py
pyobfuscator/encoders/: base.py  fast_encoders.py  fractal_encoder.py  quantum_encoder.py  simple_encoder.py  steganographic_encoder.py  tensor_encoder.py
test_app/: config.py  main.py  utils.py
